<resources>
    <string name="app_name">Guitar Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_all">Удалить всё</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="url">URL</string>
    <string name="uri">URI</string>
    <string name="change_theme">сменить тему</string>
    <string name="apply">Применить</string>
    <string name="until">до</string>
    <string name="from">от</string>
    <string name="clear">Очистить</string>
    <string name="close">Закрыть</string>
    <string name="filters">Фильтры</string>
    <string name="make_order">Оформить заказ</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="price">Цена</string>
    <string name="discount">Скидка</string>
    <string name="popularity">Популярность</string>
    <string name="quantity">Количество</string>
    <string name="firm">Фирма</string>
    <string name="model">Модель</string>
    <string name="type">Тип</string>
    <string name="isShow">Отбражать</string>
    <string name="password">Пароль</string>
    <string name="number">Телефон</string>
    <string name="register_now">Зарегистрироваться</string>
    <string name="log_out">Выйти</string>
    <string name="basket">Корзина</string>
    <string name="open_shop">В магазин</string>
    <string name="database_settings">Настройки базы данных</string>
    <string name="address">Адрес</string>
    <string name="add_to_basket">В корзину</string>
    <string name="total">Всего</string>
    <string name="characteristic">Характеристики</string>
    <string name="specification">Описание</string>
    <string name="not_available">Нет в наличии</string>
    <string name="login_text">Логин</string>
    <string name="open_catalog">Каталог</string>
    <string name="history">История покупок</string>
    <string-array name="product_types">
        <item>Электогитара</item>
        <item>Басс-гитара</item>
    </string-array>

    <string-array name="sort_types">
        <item>Сначала популярные</item>
        <item>Сначала дорогие</item>
        <item>Сначала дешёвые</item>
        <item>По алфавиту</item>
    </string-array>
</resources>