<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textSize="15sp"
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/registration"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/registration"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/out"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/log_out"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/basket"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/basket"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/in_shop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_catalog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/medium_text"
        android:background="@drawable/oval_button_dark_ripple"
        android:stateListAnimator="@null"
        android:textColor="?attr/colorSecondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>