<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:background="@drawable/layout_light_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraint"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/medium_horizontal_margin"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/constraintSlider"
                android:layout_height="525dp"
                android:background="@drawable/white_layout_border"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingBottom="5dp">

                <com.smarteist.autoimageslider.SliderView
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginVertical="@dimen/medium_vertical_margin"
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:background="@color/white"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="false"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#bbb"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="false" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/product_name"
                android:textAllCaps="true"
                tools:text="qweqeqw wqeweqw "
                android:textSize="20sp"
                android:layout_marginTop="@dimen/medium_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/constraintSlider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:background="@drawable/layout_border"
                android:id="@+id/linear_characteristic"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/medium_vertical_margin"
                android:padding="@dimen/medium_horizontal_margin">

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/characteristic"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/quantity"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/product_quantity"
                        tools:text="1"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/firm"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/product_firm"
                        tools:text="1"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/model"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/product_model"
                        tools:text="1"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/type"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/product_type"
                        tools:text="1"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:background="@drawable/layout_border"
                app:layout_constraintTop_toBottomOf="@id/linear_characteristic"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/big_horizontal_margin"
                android:padding="@dimen/medium_horizontal_margin">

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/specification"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="20sp"
                    android:id="@+id/product_specification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="fdsfdsdsdsfdsll;ks"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/medium_horizontal_margin"
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            tools:text="333131 р."
            android:id="@+id/product_price"
            android:layout_marginStart="@dimen/big_horizontal_margin"
            app:layout_constraintBottom_toTopOf="@id/add_to_basket"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:text="@string/add_to_basket"
            android:id="@+id/add_to_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/oval_button_dark_ripple"
            android:stateListAnimator="@null"
            android:textColor="?attr/colorSecondary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>