<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/to_order_button"
        android:layout_width="match_parent"
        android:layout_height="0dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginVertical="10dp"
            android:id="@+id/basket_recycler"
            android:nestedScrollingEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tv_address"
                android:textSize="20sp"
                android:text="@string/address"
                app:layout_constraintTop_toTopOf="@id/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

                <EditText
                    app:layout_constraintStart_toEndOf="@id/tv_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:layout_marginHorizontal="10dp"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sum"
                android:textSize="20sp"
                android:text="@string/total"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/total_price"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_sum"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/to_order_button"
        android:text="@string/make_order"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/oval_button_dark_ripple"
        android:stateListAnimator="@null"
        android:textColor="?attr/colorSecondary"/>


</androidx.constraintlayout.widget.ConstraintLayout>