<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@drawable/layout_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:padding="@dimen/medium_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--            <TextView-->
<!--                android:textSize="20sp"-->
<!--                android:gravity="center"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Логин"/>-->

<!--            <EditText-->
<!--                android:id="@+id/login"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"/>-->


            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                android:id="@+id/login_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/login_text"
                app:errorEnabled="true"
                app:hintTextColor="?android:attr/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorOnPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--            <TextView-->
<!--                android:textSize="20sp"-->
<!--                android:gravity="center"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/password"/>-->

<!--            <EditText-->
<!--                android:id="@+id/password"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:inputType="textPassword" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:hintTextColor="?android:attr/textColor"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:background="?colorOnPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--            <TextView-->
<!--                android:textSize="20sp"-->
<!--                android:gravity="center"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/number"/>-->

<!--            <EditText-->
<!--                android:id="@+id/number"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:inputType="phone"-->
<!--                android:maxLength="11"-->
<!--                android:textSize="20sp" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                android:id="@+id/number_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/number"
                app:errorEnabled="true"
                app:hintTextColor="?android:attr/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="phone"
                android:background="?colorOnPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_registration"
                android:text="@string/register_now"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:background="@drawable/oval_button_dark_ripple"
                android:stateListAnimator="@null"
                android:textColor="?attr/colorSecondary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>